--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://anuvabb31:<your-password>@cluster0.zyl49jd.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=chaiaurcode
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=chaiaurbackend
+REFRESH_TOKEN_EXPIRY=10d
