--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ ACCESS_TOKEN_SECRET=chaiaurcode
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=chaiaurbackend
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_CLOUND_NAME=db5eyurcb
+CLOUDINARY_API_KEY=151192721378988,
+CLOUDINARY_API_SECRET=1qBeYKMceavtrcwNn5vUQ_nVTXQ
